# incubator

./: .gitignore  CMakeLists.txt  README.md  cmake_debug.sh  cmake_release.sh
cmake-modules/: MgTargetDefaults.cmake  MgThirdPartyFetchers.cmake
libraries/mgbase/: .gitignore  CMakeLists.txt  LICENSE  README.md
libraries/mgbase/include/mgbase/: assert.hpp  base.hpp  console.hpp  idempotent.hpp  sem.hpp
libraries/mgbase/src/: assert.cpp  base.cpp  console.cpp  idempotent.cpp
libraries/mgbase/unittests/: CMakeLists.txt  idempotent.cpp  main.cpp
